--- a/ComputeTaskEmbedding.ipynb
+++ b/ComputeTaskEmbedding.ipynb
@@ -12,20 +12,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yq5oxqMQCIyy",
-        "outputId": "78218710-e736-4950-9644-693ccbeb61a7"
+        "outputId": "ff003adb-f4f3-4ae2-d96a-91a9496a3a3e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
       ],
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -98,8 +98,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "JhUZA61EMbQO",
-        "cellView": "form"
+        "id": "JhUZA61EMbQO"
       },
       "outputs": [],
       "source": [
@@ -167,39 +166,7 @@
         "        writer.writerow(row)\n",
         "!rm datasets/sst2/train.tsv\n",
         "!mv datasets/sst2/train2.tsv datasets/sst2/train.tsv\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "A9F7hfroI4IO",
-        "outputId": "c73a2309-c41a-44e7-86d8-5bf64d545143"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2022-12-07 17:20:49--  https://raw.githubusercontent.com/duorc/duorc/master/dataset/ParaphraseRC_train.json\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 43374860 (41M) [text/plain]\n",
-            "Saving to: ‘datasets/tmp/ParaphraseRC_train.json’\n",
-            "\n",
-            "ParaphraseRC_train. 100%[===================>]  41.37M   186MB/s    in 0.2s    \n",
-            "\n",
-            "2022-12-07 17:20:50 (186 MB/s) - ‘datasets/tmp/ParaphraseRC_train.json’ saved [43374860/43374860]\n",
-            "\n"
-          ]
-        }
-      ],
-      "source": [
+        "\n",
         "# duorc\n",
         "\n",
         "!wget -nc 'https://raw.githubusercontent.com/duorc/duorc/master/dataset/ParaphraseRC_train.json' -P datasets/tmp\n",
@@ -243,8 +210,7 @@
         "    json.dump(data, outfile)\n",
         "\n",
         "adapt_duorc('datasets/tmp/ParaphraseRC_train.json', 'datasets/duorc_p/train.json')\n",
-        "adapt_duorc('datasets/tmp/SelfRC_train.json', 'datasets/duorc_r/train.json')\n",
-        "                   "
+        "adapt_duorc('datasets/tmp/SelfRC_train.json', 'datasets/duorc_r/train.json')"
       ]
     },
     {
@@ -325,16 +291,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XVaQJ6l1Xz1r"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
         "id": "o95S8mMUCwIw"
       },
       "outputs": [],
@@ -757,6 +713,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "cellView": "form",
         "id": "B8ZUZZD7GDSm"
       },
       "outputs": [],
@@ -1048,36 +1005,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "kjfkeFUQ5Ddw",
-        "outputId": "73003ba8-9d09-427c-93d3-64d0cea0d5b0",
         "cellView": "form"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "WARNING:__main__:Device: cuda, n_gpu: 1\n",
-            "100%|██████████| 433/433 [00:00<00:00, 426522.69B/s]\n",
-            "100%|██████████| 231508/231508 [00:03<00:00, 68792.80B/s] \n",
-            "100%|██████████| 440473133/440473133 [00:48<00:00, 9141713.22B/s] \n",
-            "/usr/local/lib/python3.8/dist-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-            "  warnings.warn(\n",
-            "Epoch:   0%|          | 0/1 [00:00<?, ?it/s]\n",
-            "Iteration:   0%|          | 0/4 [00:00<?, ?it/s]\u001b[A/usr/local/lib/python3.8/dist-packages/torch/optim/lr_scheduler.py:131: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
-            "  warnings.warn(\"Detected call of `lr_scheduler.step()` before `optimizer.step()`. \"\n",
-            "\n",
-            "Iteration:  25%|██▌       | 1/4 [00:03<00:11,  3.68s/it]\u001b[A\n",
-            "Iteration:  50%|█████     | 2/4 [00:04<00:04,  2.28s/it]\u001b[A\n",
-            "Iteration:  75%|███████▌  | 3/4 [00:06<00:01,  1.83s/it]\u001b[A\n",
-            "Iteration: 100%|██████████| 4/4 [00:07<00:00,  1.89s/it]\n",
-            "Epoch: 100%|██████████| 1/1 [00:07<00:00,  7.59s/it]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@title Run task embeddings for QA task with Squad_v2\n",
         "\n",
@@ -1343,14 +1274,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "l9EDq9oQ1J6g",
-        "outputId": "58b50683-17fb-4056-c777-49e3a2be8891",
-        "cellView": "form"
+        "outputId": "d5cf9fab-a5ff-442d-e35e-bd139777a529"
       },
       "outputs": [
         {
@@ -1358,9 +1288,17 @@
           "name": "stderr",
           "text": [
             "WARNING:__main__:Device: cuda, n_gpu: 1\n",
-            "100%|██████████| 433/433 [00:00<00:00, 228387.03B/s]\n",
-            "100%|██████████| 231508/231508 [00:00<00:00, 2775565.48B/s]\n",
-            "100%|██████████| 440473133/440473133 [00:06<00:00, 70564229.58B/s]\n"
+            "/usr/local/lib/python3.8/dist-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+            "  warnings.warn(\n",
+            "Epoch:   0%|          | 0/1 [00:00<?, ?it/s]\n",
+            "Iteration:   0%|          | 0/4 [00:00<?, ?it/s]\u001b[A/usr/local/lib/python3.8/dist-packages/torch/optim/lr_scheduler.py:138: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
+            "  warnings.warn(\"Detected call of `lr_scheduler.step()` before `optimizer.step()`. \"\n",
+            "\n",
+            "Iteration:  25%|██▌       | 1/4 [00:04<00:13,  4.39s/it]\u001b[A\n",
+            "Iteration:  50%|█████     | 2/4 [00:04<00:04,  2.09s/it]\u001b[A\n",
+            "Iteration:  75%|███████▌  | 3/4 [00:05<00:01,  1.37s/it]\u001b[A\n",
+            "Iteration: 100%|██████████| 4/4 [00:05<00:00,  1.46s/it]\n",
+            "Epoch: 100%|██████████| 1/1 [00:05<00:00,  5.87s/it]\n"
           ]
         }
       ],
@@ -1396,8 +1334,8 @@
         "        'finetune_classifier': 'False',         # Whether to fine-tune the final classifier.\n",
         "        'finetune_feature_extractor': 'False',  # Whether to fine-tune the feature extractor.\n",
         "\n",
-        "        'batch_size': 15,\n",
-        "        'data_subset': 30,\n",
+        "        'batch_size': 5,\n",
+        "        'data_subset': 20,\n",
         "        'overwrite_output_dir': True,\n",
         "        'device': 'cuda',\n",
         "        'seed': 42,\n",
@@ -1435,12 +1373,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "60zhw9wT1K3i",
-        "cellView": "form"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bf69f31c-ae56-4a55-c45f-d5a3bb84b1bc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:__main__:Device: cuda, n_gpu: 1\n",
+            "Epoch:   0%|          | 0/1 [00:00<?, ?it/s]\n",
+            "Iteration:   0%|          | 0/4 [00:00<?, ?it/s]\u001b[A\n",
+            "Iteration:  25%|██▌       | 1/4 [00:00<00:01,  2.50it/s]\u001b[A\n",
+            "Iteration:  50%|█████     | 2/4 [00:00<00:00,  2.15it/s]\u001b[A\n",
+            "Iteration:  75%|███████▌  | 3/4 [00:01<00:00,  2.08it/s]\u001b[A\n",
+            "Iteration: 100%|██████████| 4/4 [00:01<00:00,  2.09it/s]\n",
+            "Epoch: 100%|██████████| 1/1 [00:01<00:00,  1.92s/it]\n"
+          ]
+        }
+      ],
       "source": [
         "#@title Run task embeddings for QA task with duorc_r\n",
         "\n",
@@ -1473,8 +1429,8 @@
         "        'finetune_classifier': 'False',         # Whether to fine-tune the final classifier.\n",
         "        'finetune_feature_extractor': 'False',  # Whether to fine-tune the feature extractor.\n",
         "\n",
-        "        'batch_size': 15,\n",
-        "        'data_subset': 30,\n",
+        "        'batch_size': 5,\n",
+        "        'data_subset': 20,\n",
         "        'overwrite_output_dir': True,\n",
         "        'device': 'cuda',\n",
         "        'seed': 42,\n",
@@ -1512,12 +1468,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
-        "cellView": "form",
-        "id": "DDPkT3jbKFb_"
+        "id": "DDPkT3jbKFb_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d2c54ee4-5a54-49b8-fc57-fda9abe1aab9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:__main__:Device: cuda, n_gpu: 1\n",
+            "Epoch:   0%|          | 0/1 [00:00<?, ?it/s]\n",
+            "Iteration:   0%|          | 0/4 [00:00<?, ?it/s]\u001b[A\n",
+            "Iteration:  25%|██▌       | 1/4 [00:00<00:01,  1.82it/s]\u001b[A\n",
+            "Iteration:  50%|█████     | 2/4 [00:01<00:01,  1.64it/s]\u001b[A\n",
+            "Iteration:  75%|███████▌  | 3/4 [00:01<00:00,  1.61it/s]\u001b[A\n",
+            "Iteration: 100%|██████████| 4/4 [00:02<00:00,  1.61it/s]\n",
+            "Epoch: 100%|██████████| 1/1 [00:02<00:00,  2.50s/it]\n"
+          ]
+        }
+      ],
       "source": [
         "#@title Run task embeddings for CR task with SST2\n",
         "\n",
@@ -1534,7 +1508,7 @@
         "\n",
         "    main_args = {\n",
         "        'task_name': 'sst-2',\n",
-        "        'output_dir': './results/sst2',\n",
+        "        'output_dir': './gdrive/MyDrive/colab-results/sst2',\n",
         "        'model_name_or_path': 'bert-base-uncased',\n",
         "        'model_type': 'bert',\n",
         "        'data_dir': 'datasets/sst2',\n",
@@ -1589,26 +1563,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
-        "id": "0PSdtNl9bzyW"
+        "id": "0PSdtNl9bzyW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fafa7b6f-23aa-454b-fcdb-af7aadebb24e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Diversity between squad_v2 and sst2 is: 0.895498514175415\n",
+            "Diversity between squad_v1 and sst2 is: 0.8873575329780579\n",
+            "Diversity between drop and sst2 is: 0.9019232988357544\n",
+            "Diversity between duorc_p and sst2 is: 0.7796794176101685\n",
+            "Diversity between duorc_r and sst2 is: 0.8826728463172913\n"
+          ]
+        }
+      ],
       "source": [
         "#@title Compute diversity\n",
         "\n",
         "from numpy.linalg import norm\n",
         "\n",
-        "# intermediate_tasks = ['squad_v2', 'squad_v1', 'drop', 'duorc-p', 'duorc-s']\n",
-        "# target_tasks = ['sst2']\n",
-        "\n",
-        "intermediate_tasks = ['duorc-p', 'duorc-s']\n",
+        "intermediate_tasks = ['squad_v2', 'squad_v1', 'drop', 'duorc_p', 'duorc_r']\n",
         "target_tasks = ['sst2']\n",
+        "\n",
+        "# intermediate_tasks = ['duorc-p', 'duorc-s']\n",
+        "# target_tasks = ['sst2']\n",
         "\n",
         "for i_task in intermediate_tasks:\n",
         "  for t_task in target_tasks:\n",
-        "    A = np.load(f'results/{i_task}/cls_output.npy')\n",
-        "    B = np.load(f'results/{t_task}/cls_output.npy')\n",
+        "    A = np.load(f'gdrive/MyDrive/colab-results/{i_task}/cls_output.npy')\n",
+        "    B = np.load(f'gdrive/MyDrive/colab-results/{t_task}/cls_output.npy')\n",
         "\n",
         "    cosine = np.dot(A, B) / (norm(A) * norm(B))\n",
         "\n",
@@ -1622,7 +1612,7 @@
     "colab": {
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyOtMPyM9qeWL0eX9Ov3UhdE",
+      "authorship_tag": "ABX9TyMLni3Gk1tGHfk9FfmdCeEj",
       "include_colab_link": true
     },
     "gpuClass": "premium",
